feat(dop): project pipeline types list

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1459,7 +1459,6 @@
     "mr-tpl-unit-test": "Unit testing（Note:unit testing must be able to run locally, in any environment, please mock or evade dependencies）",
     "must start with a letter or number": "must start with a letter or number",
     "my approval": "my approval",
-    "my involved applications": "my involved applications",
     "name is required": "name is required",
     "network configuration": "network configuration",
     "new": "new",
@@ -1562,6 +1561,7 @@
     "pinned successfully": "pinned successfully",
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
+    "pipeline type": "pipeline type",
     "pipeline-run-tip": "The current configuration is historical, please switch to the latest configuration before operating",
     "plan": "plan",
     "plan ID": "plan ID",
