--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1459,7 +1459,6 @@
     "mr-tpl-unit-test": "单元测试 (注意：单元测试必须能够在本地、任意环境可以顺利跑过，请自行 mock 或则规避依赖）",
     "must start with a letter or number": "必须以字母或数字开头",
     "my approval": "我审批的",
-    "my involved applications": "我参与的应用",
     "name is required": "名称不能为空",
     "network configuration": "网络配置",
     "new": "新建",
@@ -1562,6 +1561,7 @@
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
+    "pipeline type": "流水线分类",
     "pipeline-run-tip": "当前为历史配置，请切换最新配置后再操作",
     "plan": "版本",
     "plan ID": "计划 ID",
