feat(dop): export api asset (#3173)
* feat(test): add export reocrd modal

feat(dop): add api

* feat(dop): replace CustomFilter with ConfigurableFilter

feat(dop): export api

* feat(test): fix export api style

* feat(dop): fix fileName with _

* feat(dop): fix code after CR

--- a/locales/en.json
+++ b/locales/en.json
@@ -468,6 +468,7 @@
     "export": "export",
     "export configuration": "export configuration",
     "export format": "export format",
+    "export record": "export record",
     "export {type}": "export {type}",
     "exported successfully": "exported successfully",
     "external": "external",
@@ -956,6 +957,7 @@
     "version": "version",
     "version list": "version list",
     "version management": "version management",
+    "version name": "version name",
     "version number": "version number",
     "view comparison results": "view results",
     "view link": "view link",
