--- a/locales/zh.json
+++ b/locales/zh.json
@@ -468,6 +468,7 @@
     "export": "导出",
     "export configuration": "导出配置",
     "export format": "导出格式",
+    "export record": "导出记录",
     "export {type}": "导出 {type}",
     "exported successfully": "导出成功",
     "external": "外部",
@@ -956,6 +957,7 @@
     "version": "版本",
     "version list": "版本列表",
     "version management": "版本管理",
+    "version name": "版本名称",
     "version number": "版本号",
     "view comparison results": "查看对比结果",
     "view link": "查看链路",
