--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1076,6 +1076,7 @@
     "changed": "changed",
     "changed file(s)": "changed file(s)",
     "changed files": "changed files",
+    "check execution history": "check execution history",
     "check failed reason": "check failed reason",
     "checkrun-failure-tip": "the code review in MR failed. Please check the pipeline for details",
     "checkrun-process-tip": "the code review in MR is in progress, please check the pipeline for details",
@@ -1244,6 +1245,7 @@
     "edit notification": "edit notification",
     "edit service instance": "edit service instance",
     "edit test plan": "edit test plan",
+    "edit to check": "edit to check",
     "efficiency measure": "efficiency measure",
     "email": "email",
     "empty, not empty": "Empty, Not empty",
@@ -1562,6 +1564,8 @@
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
     "pipeline type": "pipeline type",
+    "pipeline-changed-tip1": "the content of the current pipeline has been changed and needs to be manually switched to view",
+    "pipeline-changed-tip2": "the content of the current pipeline has been changed, the details can be",
     "pipeline-run-tip": "The current configuration is historical, please switch to the latest configuration before operating",
     "plan": "plan",
     "plan ID": "plan ID",
@@ -1843,6 +1847,7 @@
     "the current request has no body": "the current request has no body",
     "the document is illegal according to the rules of openapi 3.0. Please click to": "the document is illegal according to the rules of openapi 3.0. Please click to",
     "the label does not exist, please select again": "the label does not exist, please select again",
+    "the latest execution status": "the latest execution status",
     "the loop node does not render": "the loop node does not render",
     "the maximum length": "the maximum length",
     "the maximum value must be greater than or equal to the minimum value": "the maximum value must be greater than or equal to the minimum value",
