--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1076,6 +1076,7 @@
     "changed": "已变更",
     "changed file(s)": "个文件修改",
     "changed files": "变更",
+    "check execution history": "查看执行历史",
     "check failed reason": "查看失败原因",
     "checkrun-failure-tip": "本次 MR 中代码审查失败，详情请查看流水线",
     "checkrun-process-tip": "本次 MR 中代码审查进行中，详情请查看流水线",
@@ -1244,6 +1245,7 @@
     "edit notification": "编辑通知",
     "edit service instance": "编辑服务实例",
     "edit test plan": "编辑测试计划",
+    "edit to check": "编辑查看",
     "efficiency measure": "效能度量",
     "email": "邮箱",
     "empty, not empty": "为空、不为空",
@@ -1562,6 +1564,8 @@
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
     "pipeline type": "流水线分类",
+    "pipeline-changed-tip1": "当前流水线内容已变更，需要手动切换查看",
+    "pipeline-changed-tip2": "当前流水线内容已变更，详情可以",
     "pipeline-run-tip": "当前为历史配置，请切换最新配置后再操作",
     "plan": "版本",
     "plan ID": "计划 ID",
@@ -1843,6 +1847,7 @@
     "the current request has no body": "当前请求无body",
     "the document is illegal according to the rules of openapi 3.0. Please click to": "文档格式错误, 不是合法的openapi 3.0文件。点击",
     "the label does not exist, please select again": "该标签不存在，请重新选择",
+    "the latest execution status": "最新执行状态",
     "the loop node does not render": "循环节点不做渲染",
     "the maximum length": "最大长度",
     "the maximum value must be greater than or equal to the minimum value": "最大值必须大于等于最小值",
