fix(dop): project pipeline guides list text optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1041,7 +1041,6 @@
     "branch name": "branch name",
     "branch rule": "branch rule",
     "branch to commit": "branch to commit",
-    "branch {branch} has been found in the code repository of {app} applications": "branch {branch} has been found in the code repository of {app} applications",
     "branch-config-tip": "The platform has strict relationship between branches and the environment. While the system has built-in best practice configuration, it supports users to customize the configuration",
     "branches": "branches",
     "bug description": "bug description",
@@ -1564,6 +1563,7 @@
     "pinned successfully": "pinned successfully",
     "pipeline ID": "pipeline ID",
     "pipeline configuration": "pipeline configuration",
+    "pipeline files were discovered in the {branch} branch of the {app} application today": "pipeline files were discovered in the {branch} branch of the {app} application today",
     "pipeline type": "pipeline type",
     "pipeline-changed-tip1": "the content of the current pipeline has been changed and needs to be manually switched to view",
     "pipeline-changed-tip2": "the content of the current pipeline has been changed, the details can be",
