--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1041,7 +1041,6 @@
     "branch name": "分支名",
     "branch rule": "分支规则",
     "branch to commit": "提交分支",
-    "branch {branch} has been found in the code repository of {app} applications": "{app} 应用的代码仓库中，本日新发现了分支 {branch}",
     "branch-config-tip": "平台对于分支与环境有严格关系管理，系统内置最佳实践配置的同时，支持用户进行自定义编辑配置",
     "branches": "分支",
     "bug description": "缺陷描述",
@@ -1564,6 +1563,7 @@
     "pinned successfully": "置顶成功",
     "pipeline ID": "流水线ID",
     "pipeline configuration": "流水线配置",
+    "pipeline files were discovered in the {branch} branch of the {app} application today": "{app} 应用的 {branch} 分支下，本日新发现了流水线文件",
     "pipeline type": "流水线分类",
     "pipeline-changed-tip1": "当前流水线内容已变更，需要手动切换查看",
     "pipeline-changed-tip2": "当前流水线内容已变更，详情可以",
