feat(dop): add valid to check whether a file exists
feat(dop): add valid to check whether a file exists

--- a/locales/en.json
+++ b/locales/en.json
@@ -838,6 +838,7 @@
     "silence period policy": "silence period policy",
     "site message": "site message",
     "small": "small",
+    "source file does not exist": "source file does not exist",
     "specific content": "specific content",
     "specification": "specification",
     "staging": "staging",
