--- a/locales/zh.json
+++ b/locales/zh.json
@@ -838,6 +838,7 @@
     "silence period policy": "沉默周期策略",
     "site message": "站内信",
     "small": "小型",
+    "source file does not exist": "源文件不存在",
     "specific content": "具体内容",
     "specification": "规格",
     "staging": "预发",
