--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1041,7 +1041,6 @@
     "branch name": "branch name",
     "branch rule": "branch rule",
     "branch to commit": "branch to commit",
-    "branch {branch} has been found in the code repository of {app} applications": "branch {branch} has been found in the code repository of {app} applications",
     "branch-config-tip": "The platform has strict relationship between branches and the environment. While the system has built-in best practice configuration, it supports users to customize the configuration",
     "branches": "branches",
     "bug description": "bug description",
@@ -1425,7 +1424,6 @@
     "manage the group of releases": "manage the group of releases",
     "manual test": "manual test",
     "maximum number of loop": "maximum number of loop",
-    "maximum time consuming": "maximum time consuming",
     "medium": "medium",
     "memory size": "memory size",
     "merge description": "merge description",
@@ -1437,7 +1435,6 @@
     "milestone description": "milestone description",
     "millisecond(s)": "millisecond(s)",
     "minimum length": "minimum length",
-    "minimum time consuming": "minimum time consuming",
     "missing": "missing",
     "missing assignee": "missing assignee",
     "missing deadline": "missing deadline",
@@ -1766,6 +1763,11 @@
     "single line": "single line",
     "slight": "slight",
     "solution": "solution",
+    "sonar project key": "sonar project key",
+    "sonar service host": "sonar service host",
+    "sonar setting": "sonar setting",
+    "sonar token": "sonar token",
+    "sonar-setting-tip": "set the sonarQube service configuration information for pipeline execution sonar nodes to generate code quality reports",
     "sorry, export failed!": "sorry, export failed!",
     "source": "source",
     "source branch": "source branch",
@@ -2005,8 +2007,6 @@
     "If you delete a user, all authorized APIs for that user will be deleted.": "if you delete a user, all of the user's authorized API will be deleted!",
     "JavaScript error times": "JavaScript error times",
     "MQ call": "MQ call",
-    "No abnormal transaction data sampled yet.": "No abnormal transaction data sampled yet.",
-    "No slow transaction data sampled yet.": "No slow transaction data sampled yet.",
     "OpenAPI for partners": "OpenAPI for partners",
     "Please enter a name consisting of letters and numbers within 20 characters.": "Please enter a name consisting of letters and numbers within 20 characters.",
     "Please enter a name consisting of letters, numbers and underscores within 20 characters.": "Please enter a name consisting of letters, numbers and underscores within 20 characters.",
@@ -2047,8 +2047,6 @@
     "application": "application",
     "application id": "application ID",
     "application name": "application name",
-    "application performance indicators (within 1 hour)": "application performance indicators (within 1 hour)",
-    "application performance trends (within 1 hour)": "application performance trends (within 1 hour)",
     "are you sure to delete this monitor?": "are you sure to delete this monitor?",
     "as policy name by default": "as policy name by default",
     "ascending order": "asc order",
@@ -2095,7 +2093,6 @@
     "browse context": "browse context",
     "browse performance": "browse performance",
     "browser": "browser",
-    "browser access performance (within 1 hour)": "browser access performance (within 1 hour)",
     "browser error times": "browser error times",
     "browser performance": "browser",
     "browser performance trends": "browser performance trends",
@@ -2211,7 +2208,6 @@
     "error source": "error source",
     "error stack": "error stack",
     "error statistics": "error statistics",
-    "error transaction tracking": "error transaction tracking",
     "error type analysis": "error type analysis",
     "events": "events",
     "exact match": "exact match",
@@ -2224,7 +2220,6 @@
     "external network": "external network",
     "external network access": "external network access",
     "external network address": "external network address",
-    "external transaction": "external transaction",
     "failed response": "failed response",
     "failure status code": "failure status code",
     "filter by application": "filter by application",
@@ -2258,7 +2253,6 @@
     "hot spot analysis": "hot spot analysis",
     "hot statistics": "hot statistics",
     "html completes building": "html completes building",
-    "http error": "http error",
     "http method": "http method",
     "http protocol": "http protocol",
     "http status": "http status",
@@ -2286,7 +2280,6 @@
     "latest news": "latest news",
     "limit type": "limit type",
     "limited flow strategy": "limited flow strategy",
-    "link information": "link information",
     "live tail": "live tail",
     "load event": "load event",
     "location block configuration": "location block configuration",
@@ -2355,7 +2348,6 @@
     "page": "page",
     "page download": "page download",
     "page jump": "page jump",
-    "page performance indicator (within 1 hour)": "page performance indicator (within 1 hour)",
     "page performance trends": "page performance trends",
     "page uninstall": "page uninstall",
     "param-error-check": "request parameter error, please check params, headers and try again",
@@ -2458,7 +2450,6 @@
     "skip authentication": "skip authentication",
     "slow call": "slow call",
     "slow loading tracking": "slow loading tracking",
-    "slow transaction tracking": "slow transaction tracking",
     "sort method": "sort method",
     "source": "source",
     "specified API path": "specified API path",
@@ -2510,7 +2501,6 @@
     "traffic intercept switch": "traffic intercept switch",
     "traffic limit": "traffic limit",
     "traffic receive forwarding": "traffic receive forwarding",
-    "transactions": "transactions",
     "transmission analysis": "transmission analysis",
     "transmission traffic": "transmission traffic",
     "transport bytes(KBytes)": "transport bytes(KBytes)",
@@ -2530,7 +2520,6 @@
     "view guide": "view guide",
     "view log": "view log",
     "view tracing information": "view tracing information",
-    "visit (7 days)": "visit (7 days)",
     "visit page performance trends": "visit page performance trends",
     "visit times": "visit times",
     "web or app aggregation API": "web or app aggregation API",
