feat: sonar action setting (#3235)
* feat: add app sonar setting

* fix: add i18n

* fix: fix field max length

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1041,7 +1041,6 @@
     "branch name": "分支名",
     "branch rule": "分支规则",
     "branch to commit": "提交分支",
-    "branch {branch} has been found in the code repository of {app} applications": "{app} 应用的代码仓库中，本日新发现了分支 {branch}",
     "branch-config-tip": "平台对于分支与环境有严格关系管理，系统内置最佳实践配置的同时，支持用户进行自定义编辑配置",
     "branches": "分支",
     "bug description": "缺陷描述",
@@ -1426,7 +1425,6 @@
     "manage the group of releases": "管理该组制品",
     "manual test": "手动测试",
     "maximum number of loop": "最大循环次数",
-    "maximum time consuming": "最大耗时",
     "medium": "严重",
     "memory size": "内存数",
     "merge description": "合并描述",
@@ -1438,7 +1436,6 @@
     "milestone description": "里程碑描述",
     "millisecond(s)": "毫秒",
     "minimum length": "最小长度",
-    "minimum time consuming": "最小耗时",
     "missing": " 未填写",
     "missing assignee": "处理人未选择",
     "missing deadline": "截止日期未选择",
@@ -1767,6 +1764,11 @@
     "single line": "单行",
     "slight": "轻微",
     "solution": "解决方案",
+    "sonar project key": "sonar项目名称",
+    "sonar service host": "sonar服务地址",
+    "sonar setting": "sonar设置",
+    "sonar token": "sonar密钥",
+    "sonar-setting-tip": "设置sonarQube服务配置信息，用于流水线执行sonar节点生成代码质量报告",
     "sorry, export failed!": "抱歉。导出错误！",
     "source": "来源",
     "source branch": "源分支",
@@ -2006,8 +2008,6 @@
     "If you delete a user, all authorized APIs for that user will be deleted.": "如果删除用户，该用户的所有已授权API都会删除！",
     "JavaScript error times": "JavaScript报错次数",
     "MQ call": "MQ 调用",
-    "No abnormal transaction data sampled yet.": "暂无被采样的异常事务数据",
-    "No slow transaction data sampled yet.": "暂无被采样的慢事务数据",
     "OpenAPI for partners": "面向合作伙伴开放API",
     "Please enter a name consisting of letters and numbers within 20 characters.": "请输入20个字符内字母数字组成的名称",
     "Please enter a name consisting of letters, numbers and underscores within 20 characters.": "请输入20个字符内英文数字或下划线组成的名称",
@@ -2048,8 +2048,6 @@
     "application": "所属应用",
     "application id": "应用 ID",
     "application name": "应用名",
-    "application performance indicators (within 1 hour)": "应用性能指标(1小时内)",
-    "application performance trends (within 1 hour)": "应用性能趋势(1小时内)",
     "are you sure to delete this monitor?": "确认删除该监控？",
     "as policy name by default": "默认为策略名称",
     "ascending order": "升序",
@@ -2096,7 +2094,6 @@
     "browse context": "浏览上下文",
     "browse performance": "浏览性能",
     "browser": "浏览器",
-    "browser access performance (within 1 hour)": "浏览器访问性能(1小时内)",
     "browser error times": "浏览器报错次数",
     "browser performance": "浏览器性能",
     "browser performance trends": "浏览器性能趋势",
@@ -2212,7 +2209,6 @@
     "error source": "错误来源",
     "error stack": "错误堆栈",
     "error statistics": "错误统计",
-    "error transaction tracking": "异常事务追踪",
     "error type analysis": "错误类型分析",
     "events": "事件",
     "exact match": "精确匹配",
@@ -2225,7 +2221,6 @@
     "external network": "外部网络",
     "external network access": "外网访问",
     "external network address": "外网地址",
-    "external transaction": "外部事务",
     "failed response": "失败应答",
     "failure status code": "失败状态码",
     "filter by application": "按应用过滤",
@@ -2259,7 +2254,6 @@
     "hot spot analysis": "热点分析",
     "hot statistics": "热点统计",
     "html completes building": "HTML完成构建",
-    "http error": "Http错误",
     "http method": "http调用方法",
     "http protocol": "HTTP 协议",
     "http status": "Http状态",
@@ -2287,7 +2281,6 @@
     "latest news": "最新动态",
     "limit type": "限制方式",
     "limited flow strategy": "限流策略",
-    "link information": "链路信息",
     "live tail": "实时 tail",
     "load event": "load事件",
     "location block configuration": "location block的配置",
@@ -2356,7 +2349,6 @@
     "page": "页面",
     "page download": "页面下载",
     "page jump": "页面跳转",
-    "page performance indicator (within 1 hour)": "页面性能指标(1小时内)",
     "page performance trends": "页面性能趋势",
     "page uninstall": "页面卸载",
     "param-error-check": "请求参数错误, 请检查 params、headers 后重试",
@@ -2459,7 +2451,6 @@
     "skip authentication": "跳过鉴权",
     "slow call": "慢调用",
     "slow loading tracking": "慢加载追踪",
-    "slow transaction tracking": "慢事务追踪",
     "sort method": "排序方式",
     "source": "来源",
     "specified API path": "指定API路径",
@@ -2511,7 +2502,6 @@
     "traffic intercept switch": "流量拦截开关",
     "traffic limit": "调用量限制",
     "traffic receive forwarding": "流量接收转发",
-    "transactions": "链路追踪",
     "transmission analysis": "传输分析",
     "transmission traffic": "传输流量",
     "transport bytes(KBytes)": "传输字节(KBytes)",
@@ -2531,7 +2521,6 @@
     "view guide": "查看指南",
     "view log": "查看日志",
     "view tracing information": "查看链路信息",
-    "visit (7 days)": "访问量(7天内)",
     "visit page performance trends": "访问页面性能趋势",
     "visit times": "访问次数",
     "web or app aggregation API": "Web或者APP聚合API",
