WIP: work in  progress
WIP: WIP

feat: modify style of import and export

feat: format file data in importing file

feat: modify paging in operate history

feat: msp operation type

feat: open record modal after exporting file

refactor: refactor code

feat: i18n

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -39,8 +39,10 @@
     "3 machines": "3 machines",
     "3 or 1 is recommended, and separate them by comma": "3 or 1 is recommended, and separate them by comma",
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8 to 32 digits, including both uppercase letters, lowercase letters, and numbers",
+    "Add Dashboard": "Add Dashboard",
     "After successful setting, the system will automatically renew as set.": "after the setting is successful, the system will automatically renew the fee at this time",
     "Alibaba Cloud container service cluster": "Alibaba Cloud container service cluster",
+    "All files": "All files",
     "Allocated resources&#58; The resources reserved by project resource Quota are configured": "Allocated resources: The resources reserved by project resource Quota are configured",
     "Allocation of project resources": "Allocation of project resources",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "A region can include multiple zones (availability zones) with independent power supply and network connectivity, Zones in the same VPC are connected to the same internal network, Zones are isolated from failures in other zones",
@@ -55,7 +57,8 @@
     "CPU usage": "CPU usage",
     "CPU usage-rate": "CPU usage",
     "Chinese": "Chinese",
-    "Clean up at 3:00 a.m. every day": "Clean up at 3:00 a.m. every day",
+    "Clean up at 3am every day": "Clean up at 3am every day",
+    "Click this area to browse and upload": "Click this area to browse and upload",
     "Cloud Account": "Cloud Account",
     "Composed of lowercase letters, numbers, underscores and hyphens, started with letter and ended with letter or number, 2~64 characters": "composed of lowercase letters, numbers _, beginning with a letter, ending with a letter or number, up to 5-32 characters",
     "Conversion nodes": "Conversion nodes",
@@ -65,14 +68,25 @@
     "DML only": "DML only",
     "DNS server": "DNS server",
     "Daily": "Daily",
+    "Description": "Description",
     "Disk usage": "Disk usage",
     "Disk usage-rate": "Disk usage",
     "ECS status": "ECS status",
     "EDAS address": "EDAS address",
     "ESC billing method": "ESC billing method",
+    "Edit Name": "Edit Name",
     "English": "English",
     "Event Log": "Event Log",
+    "Export File": "Export File",
+    "Export all": "Export all",
+    "Export all data": "Export all data",
+    "Export by filter condition": "Export by filter condition",
+    "Export file": "Export file",
+    "Export the data of the filter conditions": "Export the data of the filter conditions",
+    "Export to": "Export to",
+    "Export/Import": "Export/Import",
     "Fatal": "Fatal",
+    "File must be smaller than 20 MB": "File must be smaller than 20 MB",
     "Glusterfs server IP address list": "Glusterfs server IP address list",
     "Group-ID-TCP-HTTP": "the same Group ID cannot be used for TCP protocol and HTTP protocol and needs to be applied separately.",
     "GroupID-cannot-modified": "once the GroupID is created, it cannot be modified.",
@@ -96,6 +110,7 @@
     "MySQL sonar name": "MySQL sonar name",
     "NAS address": "NAS address",
     "NAS mount address": "NAS mount address",
+    "Name": "Name",
     "No service expire within {num} days.": "No service expire within {num} days.",
     "Node List": "Node List",
     "Node conversion formula": "Node conversion formula",
@@ -124,6 +139,8 @@
     "Set the cluster oversold ratio. If the oversold ratio is 2, then 1 core CPU is used as 2 cores.": "Set the cluster oversold ratio. If the oversold ratio is 2, then 1 core CPU is used as 2 cores.",
     "Southeast Asia Pacific": "Southeast Asia Pacific",
     "Southern China": "Southern China",
+    "Start exporting, please view detail in records": "Start exporting, please view detail in records",
+    "Start importing, please view detail in records": "Start importing, please view detail in records",
     "Subscription": "Subscription",
     "The allocated node should be a certain one in the node list. Please check.": "The allocated node should be a certain one in the node list. Please check.",
     "The expected value of filter rule is required.": "The expected value of filter rule is required.",
@@ -133,6 +150,7 @@
     "There is no option under this tab, you can choose the matching mode to input data": "There is no option under this tab, you can choose the matching mode to input data",
     "Total": "Total",
     "Trend of cluster resources": "Trend of cluster resources",
+    "Upload File": "Upload File",
     "VIP segment": "VIP segment",
     "VPC": "VPC",
     "VPC label": "VPC label",
@@ -1206,7 +1224,6 @@
     "deletions": "deletions",
     "demand design": "demand design",
     "denied": "denied",
-    "dependence": "dependence",
     "deploy global variables": "deploy global variables",
     "deploy succeeded applications count / applications count": "deploy succeeded applications count / applications count",
     "deploy-upload-file-tip": "The file is stored in the /init-data directory of the container. The file name is the configured Key value. The content of the file is the uploaded file",
