--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -39,8 +39,10 @@
     "3 machines": "3台机器",
     "3 or 1 is recommended, and separate them by comma": "建议3个或1个，多个用逗号分隔",
     "6 to 32 digits, must contain letters in uppercase and lowercase and numbers": "8到32位，需同时包含大写字母、小写字母和数字",
+    "Add Dashboard": "新建大盘",
     "After successful setting, the system will automatically renew as set.": "设置成功后，系统自动以此时长进行续费",
     "Alibaba Cloud container service cluster": "阿里云容器服务集群",
+    "All files": "所有文件",
     "Allocated resources&#58; The resources reserved by project resource Quota are configured": "已分配资源: 按照项目资源 Quota 配置所预留出的资源",
     "Allocation of project resources": "项目资源分布",
     "Availability zone refers to a physical area where power and network are independent. In the same private network, the intranet is connected and fault isolation can be realized among availability zones.": "可用区是指在同一地域内，电力和网络互相独立的物理区域。在同一专有网络内可用区与可用区之间内网互通，可用区之间能做到故障隔离。",
@@ -55,7 +57,8 @@
     "CPU usage": "CPU 使用",
     "CPU usage-rate": "CPU 使用率",
     "Chinese": "中文",
-    "Clean up at 3:00 a.m. every day": "每天凌晨3点执行清理",
+    "Clean up at 3am every day": "每天凌晨3点执行清理",
+    "Click this area to browse and upload": "点击此区域进行浏览上传",
     "Cloud Account": "云账户",
     "Composed of lowercase letters, numbers, underscores and hyphens, started with letter and ended with letter or number, 2~64 characters": "由小写字母、数字、下划线组成，字母开头，字母或数字结尾，5~32个字符",
     "Conversion nodes": "转换节点",
@@ -65,14 +68,25 @@
     "DML only": "仅DML",
     "DNS server": "DNS服务器",
     "Daily": "每天",
+    "Description": "大盘描述",
     "Disk usage": "磁盘使用",
     "Disk usage-rate": "磁盘使用率",
     "ECS status": "云主机状态分布",
     "EDAS address": "EDAS地址",
     "ESC billing method": "云主机付费方式分布",
+    "Edit Name": "编辑大盘名称",
     "English": "英文",
     "Event Log": "事件日志",
+    "Export File": "导出文件",
+    "Export all": "全部导出",
+    "Export all data": "将全部数据进行导出",
+    "Export by filter condition": "按过滤条件导出",
+    "Export file": "导出文件",
+    "Export the data of the filter conditions": "将筛选器过滤条件后的数据进行导出",
+    "Export to": "导出至",
+    "Export/Import": "导出/导入",
     "Fatal": "故障",
+    "File must be smaller than 20 MB": "文件必须小于 20MB",
     "Glusterfs server IP address list": "Glusterfs服务端IP地址列表",
     "Group-ID-TCP-HTTP": "同一个 Group ID 不可共用于 TCP 协议和 HTTP 协议，需要分别申请。",
     "GroupID-cannot-modified": "GroupID 一旦创建则无法修改。",
@@ -96,6 +110,7 @@
     "MySQL sonar name": "MySQL sonar数据库名",
     "NAS address": "NAS地址",
     "NAS mount address": "NAS挂载地址",
+    "Name": "大盘名称",
     "No service expire within {num} days.": "{num}天内无到期服务，请放心使用",
     "Node List": "节点列表",
     "Node conversion formula": "节点转换公式",
@@ -124,6 +139,8 @@
     "Set the cluster oversold ratio. If the oversold ratio is 2, then 1 core CPU is used as 2 cores.": "设置集群超买比,如超买比为2，即1核CPU当2核用",
     "Southeast Asia Pacific": "亚太东南",
     "Southern China": "华南",
+    "Start exporting, please view detail in records": "开始导出，请在记录中查看详细信息",
+    "Start importing, please view detail in records": "开始导入，请在记录中查看详细信息",
     "Subscription": "包年包月",
     "The allocated node should be a certain one in the node list. Please check.": "分配节点应为节点列表中的某一个，请核对",
     "The expected value of filter rule is required.": "过滤规则的预期值必填",
@@ -133,6 +150,7 @@
     "There is no option under this tab, you can choose the matching mode to input data": "此标签下暂无选项，您可以选择匹配模式输入数据",
     "Total": "总计",
     "Trend of cluster resources": "集群资源变化趋势",
+    "Upload File": "上传文件",
     "VIP segment": "VIP网段",
     "VPC": "专有网络",
     "VPC label": "VPC 标签",
@@ -1206,7 +1224,6 @@
     "deletions": "处删除",
     "demand design": "需求设计",
     "denied": "拒绝",
-    "dependence": "依赖",
     "deploy global variables": "部署全局变量",
     "deploy succeeded applications count / applications count": "部署成功应用数 / 应用总数",
     "deploy-upload-file-tip": "文件位于容器的 /init-data 目录下，文件名为配置的 Key 值，文件内容即上传的文件，可进入容器控制台查看",
