feat: sync change iteration/labels to include tasks in issue detail (#3278)
* feat: sync changed to include tasks in issue detail

* fix: fix api

* fix: fix issue icon

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1347,6 +1347,7 @@
     "Host address": "主机地址",
     "hosts mapping": "Hosts 映射",
     "How to start": "如何开始",
+    "i know": "我知道了",
     "if you need to import with Excel, please": "如需以 Excel 导入，请先",
     "if you want to import with XMind, please": "如需以 XMind 导入，请先",
     "Image name": "镜像名称",
@@ -1390,6 +1391,9 @@
     "Title-issue": "问题标题",
     "Type-issue": "事项类型",
     "Issue Workflow": "事项工作流",
+    "issue-iteration-update-tip": "需求迭代时间前移，迭代将同步到所有包含的任务中",
+    "issue-iteration-update-tip-2": "是否将本次迭代变更同步到包含的所有任务重？",
+    "issue-labels-update-tip": "是否将本次标签变更同步到包含的所有任务中？",
     "Project issues include milestones, requirements, bugs and tasks, and you can set the workflow as needed.": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
     "issues associated label will be deleted, confirm to delete?": "将会删除事项中关联的标签，确认删除？",
     "iteration": "迭代",
@@ -1819,6 +1823,7 @@
     "supports integers and decimals": "支持整数，小数。",
     "switch artifact": "更换制品",
     "Switch organization": "切换组织",
+    "synchronize": "同步",
     "System": "系统",
     "system log": "系统日志",
     "system properties": "系统属性",
@@ -1885,9 +1890,9 @@
     "time spent in time tracing": "时间跟踪内的所用时间",
     "timed successfully": "定时成功",
     "timing canceled": "定时已取消",
+    "tips of branch {branch} under application {application}": "应用{application}下分支{branch}的提示",
     "tips of publish api 1": "发布版本需要按照语义化版本规范给出，参考以下链接",
     "tips of publish api 2": "当文档版本发生变化时，需要递增发布版本的主版本号",
-    "tips of branch {branch} under application {application}": "应用{application}下分支{branch}的提示",
     "title required": "标题必填",
     "to configure": "进行配置",
     "total": "总量",
