--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1347,6 +1347,7 @@
     "Host address": "Host address",
     "hosts mapping": "hosts mapping",
     "How to start": "How to start",
+    "i know": "i know",
     "if you need to import with Excel, please": "if you need to import with Excel, please ",
     "if you want to import with XMind, please": "if you want to import with XMind, please",
     "Image name": "Image name",
@@ -1390,6 +1391,9 @@
     "Title-issue": "Title",
     "Type-issue": "Type",
     "Issue Workflow": "Issue Workflow",
+    "issue-iteration-update-tip": "the requirement iteration is moved forward, and the iteration will be synchronized to all included tasks",
+    "issue-iteration-update-tip-2": "do you want to sync this iteration change to all included tasks?",
+    "issue-labels-update-tip": "do you want to sync this label change to all included tasks?",
     "Project issues include milestones, requirements, bugs and tasks, and you can set the workflow as needed.": "Project issues include milestone, requirement, bug and task. And you can set up workflow state for each issue if you want",
     "issues associated label will be deleted, confirm to delete?": "issues associated label will be deleted, confirm to delete?",
     "iteration": "iteration",
@@ -1819,6 +1823,7 @@
     "supports integers and decimals": "supports integers and decimals",
     "switch artifact": "switch artifact",
     "Switch organization": "Switch organization",
+    "synchronize": "synchronize",
     "System": "System",
     "system log": "system log",
     "system properties": "system properties",
@@ -1885,9 +1890,9 @@
     "time spent in time tracing": "time spent in time tracing",
     "timed successfully": "timed successfully",
     "timing canceled": "timing canceled",
+    "tips of branch {branch} under application {application}": "tips of branch {branch} under application {application}",
     "tips of publish api 1": "the release version needs to be given in accordance with the semantic version specification referring to the following link",
     "tips of publish api 2": "when the document version changes, the major version number of the released version needs to be incremented",
-    "tips of branch {branch} under application {application}": "tips of branch {branch} under application {application}",
     "title required": "title required",
     "to configure": "to configure",
     "total": "total",
