--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1347,7 +1347,6 @@
     "host address": "host address",
     "hosts mapping": "hosts mapping",
     "how to start": "how to start",
-    "i know": "i know",
     "if you need to import with Excel, please": "if you need to import with Excel, please ",
     "if you want to import with XMind, please": "if you want to import with XMind, please",
     "image name": "image name",
@@ -1391,9 +1390,9 @@
     "issue title": "issue title",
     "issue type": "issue type",
     "issue workflow": "issue workflow",
-    "issue-iteration-update-tip": "the requirement iteration is moved forward, and the iteration will be synchronized to all included tasks",
-    "issue-iteration-update-tip-2": "do you want to sync this iteration change to all included tasks?",
-    "issue-labels-update-tip": "do you want to sync this label change to all included tasks?",
+    "issue-iteration-update-tip": "the requirement is moved to an earlier iteration, all included tasks will be moved to the same iteration synchronously.",
+    "issue-iteration-update-tip-2": "Sync the changed iteration to all included tasks?",
+    "issue-labels-update-tip": "Sync the changed labels to all included tasks?",
     "issue-workflow-config-tip": "Project issues include milestone, requirement, bug and task. And you can set up workflow state for each issue if you want",
     "issues associated label will be deleted, confirm to delete?": "issues associated label will be deleted, confirm to delete?",
     "iteration": "iteration",
