--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1347,7 +1347,6 @@
     "host address": "主机地址",
     "hosts mapping": "Hosts 映射",
     "how to start": "如何开始",
-    "i know": "我知道了",
     "if you need to import with Excel, please": "如需以 Excel 导入，请先",
     "if you want to import with XMind, please": "如需以 XMind 导入，请先",
     "image name": "镜像名称",
@@ -1391,9 +1390,9 @@
     "issue title": "问题标题",
     "issue type": "事项类型",
     "issue workflow": "事项工作流",
-    "issue-iteration-update-tip": "需求迭代时间前移，迭代将同步到所有包含的任务中",
-    "issue-iteration-update-tip-2": "是否将本次迭代变更同步到包含的所有任务重？",
-    "issue-labels-update-tip": "是否将本次标签变更同步到包含的所有任务中？",
+    "issue-iteration-update-tip": "需求的迭代前移，所有包含的任务将同步迁移至需求所在的迭代.",
+    "issue-iteration-update-tip-2": "是否将本次变更的迭代版本号同步到所有包含的任务中？",
+    "issue-labels-update-tip": "是否将本次变更的标签同步到所有包含的任务中？",
     "issue-workflow-config-tip": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
     "issues associated label will be deleted, confirm to delete?": "将会删除事项中关联的标签，确认删除？",
     "iteration": "迭代",
